--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,6 +10,7 @@ header {
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
     z-index: -1;
+    max-height: 100vh;
 }
 
 .sky {
