--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 body::-webkit-scrollbar {
-    width: 2px;
+    width: 4px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: linear-gradient(0deg, rgb(167, 111, 167), rgb(92, 61, 92));
+}
+
+body::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(0deg, rgb(163, 76, 163), rgb(85, 38, 85));
 }
