--- a/src/components/CitiesLinks/CitiesLinks.css
+++ b/src/components/CitiesLinks/CitiesLinks.css
@@ -3,5 +3,13 @@
     
 }
 .text-shadow {
-    text-shadow: 0 0 3px black;
+    color: #fff;
+    text-shadow: 0 0 3px #000;
+    font-size: 3rem;
+}
+
+@media (max-width:500px) {
+    .text-shadow {
+        font-size: 1.5rem;
+    }
 }
