--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -38,6 +38,28 @@ header button {
 
 @media (max-width:1000px) {
     .hero {
+        margin-top: 6rem;
+    }
+
+    header h1 {
+        font-size: 65px;
+    }
+    
+    header p {
+        font-size: 1.125rem;
+    }
+    
+    header p:first-child {
+        font-size: 1.75rem;
+    }
+
+    header button {
+        font-size: 1.25rem;
+    }
+}
+
+@media (max-width:800px) {
+    .hero {
         margin-top: 4rem;
     }
 
@@ -80,6 +102,6 @@ header button {
 
     header button {
         font-size: 0.75rem;
-        margin: 0.75rem 0
+        margin: 0.25rem 0
     }
 }
