--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,8 +1,6 @@
 .mySwiper {
     width: 100%;
-    height: 100%;
-    margin-left: auto;
-    margin-right: auto;
+    height: auto;
     background-color: red;
 }
 
@@ -15,4 +13,8 @@
     border: 2px solid #fff;
     width: 10px;
     aspect-ratio: 1/1;
+}
+
+.cHeight {
+    aspect-ratio: 3/2;
 }
