--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,13 +3,11 @@
     background-size: cover;
     background-repeat: no-repeat;
     aspect-ratio: 16/9;
-    display: grid;
-    grid-template-areas: "hero .";
 }
 
 .hero {
-    grid-area: hero;
-    margin-top: 10rem;
+    top: 20%;
+    left: 8%;
 }
 
 header h1,
@@ -19,89 +17,59 @@ header p {
 }
 
 header h1 {
-    font-size: 80px;
+    font-size: 6vw;
 }
 
 header p {
-    font-size: 20px;
+    font-size: 1.75vw;
 }
 
 header p:first-child {
-    font-size: 30px;
+    font-size: 2.5vw;
+    -webkit-transform: translateY(2vw);
+    -moz-transform: translateY(2vw);
+    -ms-transform: translateY(2vw);
+    -o-transform: translateY(2vw);
+    transform: translateY(2vw);
 }
 
 header button {
-    font-size: 1.5rem;
-    margin: 1.25rem 0;
-    padding: 0.25rem 1rem 0.5rem 1rem;
+    font-size: 1.75vw;
+    margin: 1vw 0;
+    padding: 0.25vw 0.75vw 0.5vw 0.75vw;
 }
 
-@media (max-width:1000px) {
-    .hero {
-        margin-top: 6rem;
+@media (max-width:767px) {
+    .img-cover {
+        background-size: cover;
     }
 
+    .hero {
+        top: 10%;
+        left: 8%;
+        right: 8%;
+    }
+    
     header h1 {
-        font-size: 65px;
+        font-size: 12vw;
     }
     
     header p {
-        font-size: 1.125rem;
+        font-size: 3.5vw;
     }
     
     header p:first-child {
-        font-size: 1.75rem;
-    }
-
-    header button {
-        font-size: 1.25rem;
-    }
+        font-size: 5vw;
+        transform: translateY(4vw);
+        -webkit-transform: translateY(4vw);
+        -moz-transform: translateY(4vw);
+        -ms-transform: translateY(4vw);
+        -o-transform: translateY(4vw);
 }
-
-@media (max-width:800px) {
-    .hero {
-        margin-top: 4rem;
-    }
-
-    header h1 {
-        font-size: 50px;
-    }
     
-    header p {
-        font-size: 1rem;
-    }
-    
-    header p:first-child {
-        font-size: 1.5rem;
-    }
-
     header button {
-        font-size: 1rem;
-    }
-}
-
-@media (max-width:650px) {
-    .hero {
-        margin-top: 1rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    header h1 {
-        font-size: 30px;
-    }
-    
-    header p {
-        font-size: 0.75rem;
-    }
-    
-    header p:first-child {
-        font-size: 1rem;
-    }
-
-    header button {
-        font-size: 0.75rem;
-        margin: 0.25rem 0
+        font-size: 3.5vw;
+        margin: 1vw 0;
+        padding: 0.5vw 1.5vw 1vw 1.5vw;
     }
 }
