--- a/src/components/ItineraryPrice/ItineraryPrice.css
+++ b/src/components/ItineraryPrice/ItineraryPrice.css
@@ -3,12 +3,11 @@
 }
 
 .coin {
-    font-size: 16px;
-    color: gray;
+    color: rgb(175, 175, 175);
     margin: 0 0.125rem;
     font-weight: 600;
 }
 
 .coin.filled {
-    color: green;
+    color: rgb(44, 44, 185);
 }
